# python_repo_template

./: README-DEV.MD  README.md  pyproject.toml
.config/: pytest.ini  ruff.toml
.github/workflows/: pr-checker.yml  release.yml
src/my_project/: __init__.py  __main__.py  _run.py
tests/my_project/: test__main__.py  test_run.py
