[project]
name = "MyProject"
description = "My project description"
version = "0.1.0-dev"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[[project.authors]]
name = "KRunchPL"
email = "krunchfrompoland@gmail.com"

[project.urls]
homepage = "https://github.com/KRunchPL/my-project"
repository = "https://github.com/KRunchPL/my-project"
documentation = "https://github.com/KRunchPL/my-project"

[tool.hatch.build.targets.wheel]
packages = [
    "src/my_project",
]

[dependency-groups]
dev = [
    "darglint >=1.8.1,<2",
    "flake8 >=7.1.1,<8",
    "ruff >=0.8.2,<0.9.0",
    "mypy >=1.13.0,<1.14.0",
    "pytest >=8.3.4,<9",
    "pytest-cov >=6.0.0,<7",
    "pytest-mock >=3.14.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
